<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@color/black"
        android:textAlignment="center">


        <LinearLayout
            android:id="@+id/navbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="54dp"
            android:layout_marginLeft="-10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/soft_hand_logo"
                android:layout_marginLeft="10dp">

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="-15dp"
                >

            </TextView>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/menu"
                android:layout_marginLeft="150dp">

            </ImageView>




        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="40dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"

            android:background="@drawable/tint_background">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/tint"

                >

            </ImageView>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tint_string"
                android:textColor="@color/white"
                android:textSize="10sp"
                >

            </TextView>

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/grey_white"
            android:textSize="32sp"
            android:textAlignment="center">

        </TextView>

        <TextView
            android:layout_marginVertical="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_description"
            android:textColor="@color/grey_white"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:textSize="16sp"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:width="200dp"
            android:height="60dp"
            android:layout_marginLeft="100dp"
            android:text="@string/registration_button"
            android:textSize="20sp"
            android:paddingTop="15dp"
            android:paddingStart="20dp"
            android:textColor="@color/black">

        </TextView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/services_heading"
            android:textColor="@color/green"
            android:textSize="32sp"
            android:layout_marginTop="100dp"
            android:textStyle="bold"
            android:textAlignment="center"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services_description"
            android:textSize="16sp"
            android:textColor="@color/grey_white"
            android:textAlignment="center"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginTop="10dp">

        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/main_picture_1"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="80dp"
            >

        </ImageView>


        <TextView
            android:text="@string/services_list_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:layout_marginLeft="160dp"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services_list_description_1"
            android:textSize="16sp"
            android:textColor="@color/grey_white"
            android:textAlignment="center"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:layout_marginTop="20dp">

        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/main_picture_2"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="60dp"
            >
        </ImageView>

        <TextView
            android:text="@string/services_list_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:layout_marginLeft="160dp"
            >

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services_list_description_2"
            android:textSize="16sp"
            android:textColor="@color/grey_white"
            android:textAlignment="center"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:layout_marginTop="20dp">

        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/main_picture_3"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="60dp"
            >
        </ImageView>

        <TextView
            android:text="@string/services_list_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:layout_marginLeft="160dp"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services_list_description_3"
            android:textSize="16sp"
            android:textColor="@color/grey_white"
            android:textAlignment="center"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:layout_marginTop="20dp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction_heading"
            android:textSize="32sp"
            android:textAlignment="center"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:layout_marginTop="100dp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction_description"
            android:textSize="16sp"
            android:textColor="@color/grey_white"
            android:textAlignment="center"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:layout_marginTop="20dp">

        </TextView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
