<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/black">
    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="50dp"
        android:orientation="vertical"
        android:background="@color/black"
        >
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="32dp"
            android:textStyle="bold"
            android:textColor="@color/white"

            >

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/havent_account"
                android:textColor="@color/grey_white"
                android:layout_marginLeft="60dp"

                >

            </TextView>
            <TextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_phrase"
                android:textColor="@color/green"
                android:layout_marginLeft="-115dp">

            </TextView>

        </LinearLayout>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/post"
            android:textColor="@color/grey_white"
            android:textSize="20sp"
            >

        </TextView>


        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bottom_line"
            android:layout_marginTop="10dp"
            android:hint="@string/your_email"
            android:textColorHint="@color/grey_white"
            android:textStyle="italic"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:textColor="@color/grey_white"
            android:textSize="20sp"
            >

        </TextView>


        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bottom_line"
            android:layout_marginTop="10dp"
            android:hint="@string/your_password"
            android:textColorHint="@color/grey_white"
            android:textStyle="italic"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            >

        </EditText>

        <TextView
            android:id="@+id/registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:width="150dp"
            android:height="60dp"
            android:background="@drawable/button_background"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingTop="15dp"

            >

        </TextView>



    </LinearLayout>

</LinearLayout>